# eth-global-agent-backend

python/cdp-agentkit-core/cdp_agentkit_core/actions/: __init__.py
python/cdp-agentkit-core/cdp_agentkit_core/actions/rpg/: estimate_fighting_pow.py  fighting_arena.py  get_nft_price.py  simulate_battle.py
python/cdp-agentkit-core/docs/: Makefile
python/cdp-agentkit-core/tests/actions/rpg/: test_get_nft_price.py
python/cdp-langchain/cdp_langchain/agent_toolkits/: cdp_toolkit.py
python/examples/cdp-langchain-chatbot/: chatbot.py  pyproject.toml
