[tool.poetry]
name = "chatbot-python"
version = "0.0.1"
description = "CDP AgentKit Example Chatbot"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
cdp-langchain = { path = "../../cdp-langchain", develop = true }
uvicorn = "^0.34.0"
fastapi = "^0.115.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
